fixed spacing in CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,12 @@ button {
     .game-container p {
         font-size: 26px;
     }
+}
+@media only screen and (min-width: 1000px) {
     .htmlChoices:hover {
         cursor: pointer;
         color: #800000;
         border: 1px solid #1a1a1a;
     }    
+
 }
